--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'io.paperdb:paperdb:2.6'
 
+    // Glide library
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+    // Volley library
+    implementation 'com.android.volley:volley:1.1.0'
+
     implementation 'com.squareup.picasso:picasso:2.5.2'
 }
 apply plugin: 'com.google.gms.google-services'
