--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -17,20 +18,16 @@
         <activity android:name=".settings"></activity>
         <activity android:name=".FAQs" />
         <activity android:name=".CustomerService" />
-        <activity android:name=".splash" />
+        <!--&lt;!&ndash;<activity android:name=".splash" />&ndash;&gt;-->
         <activity android:name=".navigationfinal" />
-        <activity
-            android:name=".NavigationDrawerActivity"
-            android:label="@string/title_activity_navigation_drawer"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".DetailsActivity" />
         <activity android:name=".newsapp" />
-        <activity android:name=".Retrieve" />
+        <!--<activity android:name=".Retrieve" />-->
         <activity
-            android:name=".Rview"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".MainActivity" />
-        <activity android:name=".ProfileActivity" />
+        android:name=".Rview"
+        android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".MainActivity"/>
+        <!--<activity android:name=".ProfileActivity" />-->
         <activity android:name=".login" />
         <activity android:name=".cover">
             <intent-filter>
