--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'io.paperdb:paperdb:2.6'
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
 
     // Glide library
     implementation 'com.github.bumptech.glide:glide:4.6.1'
