--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".settings"></activity>
+        <activity android:name=".AddProducts"></activity>
+        <activity android:name=".adminview" />
         <activity android:name=".FAQs" />
         <activity android:name=".CustomerService" />
         <activity android:name=".cover" />
         <activity android:name=".navigationfinal" />
         <activity android:name=".DetailsActivity" />
         <activity android:name=".newsapp" />
-        <activity android:name=".Retrieve" />
-        <!--<activity-->
-        <!--android:name=".Rview"-->
-        <!--android:theme="@style/AppTheme.NoActionBar" />-->
-        <activity android:name=".MainActivity"/>
-        <!--<activity android:name=".ProfileActivity" />-->
+        <activity android:name=".Retrieve" /> <!-- <activity -->
+        <!-- android:name=".Rview" -->
+        <!-- android:theme="@style/AppTheme.NoActionBar" /> -->
+        <activity android:name=".MainActivity" /> <!-- <activity android:name=".ProfileActivity" /> -->
         <activity android:name=".login" />
         <activity android:name=".splash">
             <intent-filter>
