--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.0'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.ms-square:expandableTextView:0.1.4'
 }
 apply plugin: 'com.google.gms.google-services'
 com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
