--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddProducts"></activity>
+        <activity android:name=".adminlogin"></activity>
+        <!-- <activity android:name=".AddProducts"></activity> -->
         <activity android:name=".adminview" />
         <activity android:name=".FAQs" />
         <activity android:name=".CustomerService" />
