--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".adminlogin"></activity>
-        <!-- <activity android:name=".AddProducts"></activity> -->
+        <activity android:name=".Wishlist"></activity>
+        <activity android:name=".adminlogin" /> <!-- <activity android:name=".AddProducts"></activity> -->
         <activity android:name=".adminview" />
         <activity android:name=".FAQs" />
         <activity android:name=".CustomerService" />
