--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Wishlist"></activity>
+        <activity android:name=".faq_customer"></activity>
+        <activity android:name=".AdminAddNewProduct" />
+        <activity android:name=".AdminCategoryActivity" />
+        <activity android:name=".Wishlist" />
         <activity android:name=".adminlogin" /> <!-- <activity android:name=".AddProducts"></activity> -->
         <activity android:name=".adminview" />
         <activity android:name=".FAQs" />
